--- a/book.tex
+++ b/book.tex
@@ -19,24 +19,24 @@
 \include{load}
 \include{lessons}
 
-\part{Teaching}
-
-\include{performance}
-\include{live}
-\include{practices}
-\include{motivation}
-
-\part{Community}
-
-\include{carpentries}
+% \part{Teaching}
+% 
+% \include{performance}
+% \include{live}
+% \include{practices}
+% \include{motivation}
+% 
+% \part{Community}
+% 
+% \include{carpentries}
 
 \bibliographystyle{plain}
 \bibliography{book}
 
-\appendix
-
-\include{conduct}
-\include{guide}
-\include{reference}
+% \appendix
+% 
+% \include{conduct}
+% \include{guide}
+% \include{reference}
 
 \end{document}
