--- a/book.tex
+++ b/book.tex
@@ -12,16 +12,13 @@
 
 \include{welcome}
 
-\part{Lessons}
-
 \include{novice}
+\include{performance}
+
 \include{memory}
 \include{load}
 \include{lessons}
 
-% \part{Teaching}
-% 
-% \include{performance}
 % \include{live}
 % \include{practices}
 % \include{motivation}
