--- a/welcome.tex
+++ b/welcome.tex
@@ -54,65 +54,51 @@ will be useful, and will convince you that better is possible.
 
 I started teaching people how to program in the late 1980s.  At first,
 I was pretty bad at: I went too fast, I used too much jargon, and I
-assumed that my learners would be interested in the same things I was,
-for the same reasons.
-
+assumed that my learners would be interested in the same things I was.
 I got better over time, but that doesn't mean I was actually very
-good.  My students seemed to like me, but studies have repeatedly
-shown that there's no correlation between how people rate a course and
-how much they really learn \cite{fixme}.  And even though I felt I was
-improving, I had no idea how effective I was compared to other
-teachers.  Did they spend the same hours sweating over their lectures
-that I did?  Did they have to revise each homework assignment half a
-dozen times as students stumbled over omissions and contradictions?
-And how did they handle three guys in the back of the class playing
-poker online while they were lecturing?
+good.  And even though I felt I was improving, I had no idea how
+effective I was compared to other teachers.
 
-My doubts came to a head after I re-launched the Software Carpentry
-project in 2010.  Its aim was (and is) to teach basic computing skills
-to researchers from a wide range of disciplines.  What I eventually
-realized was that, ironically, I was trying to teach people how to
-build and run software in efficient, repeatable ways, but was mostly
-ignorant of equivalent techniques for writing and delivering lessons.
+My doubts came to a head after I re-launched Software Carpentry in
+2010.  Its aim was (and is) to teach basic computing skills to
+researchers from a wide range of disciplines.  What I realized then
+was that, ironically, I was trying to teach people how to build and
+run software in efficient, repeatable ways, but was mostly ignorant of
+equivalent techniques for writing and delivering lessons.
 
-Luckily, I also discovered that as a species, we know as much about
-teaching and learning as we do about public health.  Mark Guzdial's
-blog \cite{fixme} and the book \emph{How Learning Works} \cite{fixme}
-led me to the work of Lemov, Huston, Green, Fincher, and others that
-showed me what would make my teaching better, and why I should believe
-it.  (See the bibliography for an annotated list of readings.)
+Luckily, I discovered resources like Mark Guzdial's blog \cite{fixme}
+and the book \emph{How Learning Works} \cite{fixme}.  These led me to
+the work of Lemov, Huston, Green, Fincher, and others \cite{fixme},
+which showed me what would make my teaching better, and why I should
+believe it.
 
-I restarted Software Carpentry once again in January 2012, and this
-time it worked as I'd always hoped it would.  Cutting the number of
-lessons, shifting to in-person delivery, and using live coding instead
-of slides all had an impact, but what made the biggest difference was
-starting an instructor training course to turn learners into teachers.
-This approach was inspired by Myles Horton's Highlander School
-\cite{fixme}, the Antigonish Movement in Eastern Canada \cite{fixme},
-and dozens of similar co-operative grassroots efforts.
+I started using these ideas in Software Carpentry in 2012, and the
+results were everything I'd hoped for.  Cutting the number of lessons,
+shifting to in-person delivery, and using live coding all had an
+impact.  What made the biggest difference, though, was creating a
+training course to turn learners into teachers.
 
-While I initially delivered the course online over multiple weeks, by
+While I originally delivered the course online over multiple weeks, by
 2014 I was teaching it in two intensive days, just like our regular
 software skills workshops.  A year later, ``I'' became ``we'' as
-people who had been instructors for regular workshops began training
-other instructors as well.  That same year, I began teaching half-day
-and one-day versions of the course to people outside Software
-Carpentry who wanted to help children, recent immigrants, women
-re-entering the workforce, and a wide variety of others learn how to
-make computers work for them.
+people who had taught regular workshops began training new instructors
+as well.  That same year, I began teaching half-day and one-day
+versions of the course to people who wanted to help children, recent
+immigrants, women re-entering the workforce, and a wide variety of
+others.
 
-Those readings and experiences are the basis of this book, but its
-roots go much deeper.  I am grateful, always, to my own teachers for
-starting me down this path, including Louis Biczo, Lon Taylor, Ken
-Douglas, and above all, my father, Rob Wilson.  I am also grateful to
-the people who helped create the Software Carpentry instructor
-training course, including Erin Becker, Karen Cranston, Neal Davis,
-Rayna Harris, Kate Hertweck, Christina Koch, Sue McClatchy, Lex
-Nederbragt, Elizabeth Patitsas, Aleksandra Pawlik, Ariel Rokem, Tracy
-Teal, Fiona Tweedie, Allegra Via, Anelda van der Walt, Belinda Weaver,
-Jason Williams, and the hundreds of people who went through it in
-various guises over the years.  I hope you enjoy it, and if you do, I
-hope you pass on whatever you find helpful to someone else.
+Those experiences are the basis of this book, but its roots go much
+deeper.  I am grateful, always, to Louis Biczo, Lon Taylor, Ken
+Douglas, and above all, my father, Rob Wilson, for starting me down
+this path.  I am also grateful to everyone who helped shape the
+Software Carpentry instructor training course, including Erin Becker,
+Karen Cranston, Neal Davis, Rayna Harris, Kate Hertweck, Christina
+Koch, Sue McClatchy, Lex Nederbragt, Elizabeth Patitsas, Aleksandra
+Pawlik, Ariel Rokem, Tracy Teal, Fiona Tweedie, Allegra Via, Anelda
+van der Walt, Belinda Weaver, Jason Williams, and the hundreds of
+people who went through it over the years.  I hope you enjoy what
+follows.  If you do, I hope you pass on whatever you find helpful to
+someone else.
 
 \seclbl{Teaching Practices}{sec:welcome-practices}
 
