First section on performance art (29196 words)

--- a/novice.tex
+++ b/novice.tex
@@ -334,6 +334,25 @@ of the people we most wanted to help.
 
 \end{callout}
 
+\seclbl{Teaching Practices}{sec:novice-practices}
+
+\subseclbl{Status Flag}{sec:status-flags}
+
+\fixme{Status Flags}
+
+\subseclbl{Minute Cards}{sec:minute-cards}
+
+We frequently use sticky notes as \emph{minute cards}: before each
+break, learners take a minute to write one positive thing on the green
+sticky note (e.g., one thing they've learned that they think will be
+useful), and one thing they found too fast, too slow, confusing, or
+irrelevant on the red one. They can use the red sticky note for
+questions that haven't yet been answered. While they are enjoying
+their coffee or lunch, the instructors review and cluster these to
+find patterns. It only takes a few minutes to see what learners are
+enjoying, what they still find confusing, what problems they're
+having, and what questions are still unanswered.
+
 \seclbl{Challenges}{sec:novice-challenges}
 
 \begin{challenge}{Your Mental Models}{chal:novice-your-models}
@@ -384,5 +403,15 @@ that the tub overflows), go down, or stay the same?
 The correct answer is that it stays the same; figuring out why helps
 people build a model of the relationship between weight, volume, and
 density.
+
+\end{challenge}
+
+\begin{challenge}{chal:minute-cards}
+
+Write one thing you learned this morning that you found useful on your
+green sticky note, and one question you have about the material on the
+red. Do \emph{not} put your name on the notes: this is meant to be
+anonymous feedback. Add your notes to the pile by the door as you leave
+to get coffee.
 
 \end{challenge}
