--- a/memory.tex
+++ b/memory.tex
@@ -315,3 +315,5 @@ detail? Which of the relationships in your partner's map do you
 consider concepts and vice versa?
 
 \end{challenge}
+
+\fixme{studio classes and learning how to give feedback}
