--- a/book.tex
+++ b/book.tex
@@ -13,17 +13,13 @@
 \include{welcome}
 \include{novice}
 \include{performance}
-
 \include{memory}
+\include{live}
 \include{load}
+% \include{practices}
 \include{lessons}
 
-% \include{live}
-% \include{practices}
 % \include{motivation}
-% 
-% \part{Community}
-% 
 % \include{carpentries}
 
 \bibliographystyle{plain}
